Bug 91392 - 8 bit alpha drawing doesn't draw the last row of pixels in the source
Summary: 8 bit alpha drawing doesn't draw the last row of pixels in the source
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-19 14:55 UTC by Caolán McNamara
Modified: 2015-05-19 15:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (552 bytes, image/png)
2015-05-19 14:55 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2015-05-19 14:55:46 UTC
Created attachment 115719 [details]
screenshot

export SAL_DISABLE_NATIVE_ALPHA=1 (which is equivalent to what the gtk3 back end does which is why I was looking at this) and in writer in the status bar the page icons will not have their bottom borders.
Comment 1 Commit Notification 2015-05-19 15:00:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0da6ba6d3ccf736ba10bb98ca9b955736a83c5a4

Resolves: tdf#91392 orig map for orig code paths, and new map for new path

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.