Resolves: tdf#91392 orig map for orig code paths, and new map for new path

otherwise with SAL_DISABLE_NATIVE_ALPHA=1/SAL_USE_VCLPLUGIN=gtk3 the 8 bit
page icons in the status bar lose their bottom rows

Change-Id: Id9d9ba1a6fb74784a0a4c29bf3d13ebf8476c376